Fixed table shifting sizes when showing details of a reimbursement

--- a/client/src/components/reimbursement/reimbursement-table.scss
+++ b/client/src/components/reimbursement/reimbursement-table.scss
@@ -15,6 +15,7 @@
 .hidden-row{
     padding: 0 !important;
     border: 0 !important;
+    max-width: 0px;
 }
 
 .reimbursement-table-row{
